Fix border-radios on ios

--- a/src/components/Molecules/Content/Content.module.scss
+++ b/src/components/Molecules/Content/Content.module.scss
@@ -48,4 +48,13 @@
       font-size: 2.05em;
     }
   }
+
+  a {
+    color: colors.$blue;
+    text-decoration: underline;
+
+    a:hover {
+      text-decoration: none;
+    }
+  }
 }
